2003-06-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* TODO: Removed saned issues.
	* doc/descriptions/unsupported.desc: Added Microtek 336 CX.

2003-06-05  Jochen Eisinger <jochen.eisinger@gmx.de>

	* include/sane/sanei_pa4s2.h, sanei/sanei_pa4s2.c: New sanei_pa4s2
	  version supporting both raw IO and libieee1284. If you don't
	  have libieee1284 installed, you need to enable raw IO when
	  running configure
	  
2003-06-06  Oliver Schirrmeister <oschirr@abm.de>

	* backend/fujitsu.h backend/fujitsu.c doc/descriptions/fujitsu.desc
          path from anoah@pfeiffer.edu:
	  remove SP15 code
	  sane_open actually opens the device you request

2003-06-05  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES: Don't check if the firmware is
	  loaded. The check seems to confuse the USB system on some UHCI
	  chips.

2003-06-04  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* sanei/sanei_scsi.c: Fixed C++-like code for MacOS X (patch from
	  Mattias Ellert <mattias.ellert@tsl.uu.se>).
	* acinclude.m4 aclocal.m4 configure frontend/saned.c
	  include/sane/config.h.in: Check if ss_family or __ss_family is
	  in struct sockaddr_storage. Otherwise diasbale ipv6. Patch from
	  Julien BLACHE <jb@jblache.org>.

2003-06-03  Oliver Schirrmeister <oschirr@abm.de>

	* backend/fujitsu.c, backend/fujitsu.h: separated the 4x20 
	  into another model and color support for the 4x20

2003-06-03  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/Makefile.in: hp5400 doesn't need sanei_config2.

2003-05-30  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/sane-backends.fr.po: Fixed two wrong codings of accented
	  characters.
	* backend/net.c: Fixed bug concerning hosts that have both IPv6
	  and IPv4 addresses but only accept connections on IPv4. Patch
	  from Julien BLACHE <jb@jblache.org>.
	* doc/descriptions/net.desc: Mention IPv6. Bump version number.
